--- a/first.html
+++ b/first.html
@@ -10,5 +10,9 @@
         <p> น้ำหนัก: 103 kg</p>
         <p> ชื่อเล่น: นาย</p>
         <p> โรงเรียน : มหาวิทยาลัยบูรพา</p>
+        <a href="second.html">ลองกดดู</a>
+        <hr>
+        <h3>website ที่น่าสนใจ</h3>
+
     </body>
 </html>
